<resources>
    <string name="app_name" translatable="false"><center>¡Easy Prom!</center></string>
    <string name="title_activity_locales">Map</string>

    //Detalles promos
    <string name="btnReclamar" translatable="false">¡Lo Quiero!</string>
    <string name="btnLocales" translatable="false">Ver Locales</string>
    <string name="title_activity_registrar_usuario">RegistrarUsuario</string>

    //Login
    <string name="txtUsuario">Usuario</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="btnIngresar" translatable="false">Ingresar</string>
    <string name="badLog" translatable="false">Usuario o contraseña incorrecto</string>

    //Registrar
    <string name="txtEmailR">Email</string>
    <string name="txtPassR">Contraseña</string>
    <string name="btnregistrar" translatable="false">Registrar</string>

    //Menu promos
    <string name="btnVerMas" translatable="false">¡Ver Más!</string>
    <string name="txtNombre_promo">¡Ups! Parece que algo salió mal :(</string>
    <string name="txtDetalle_promo">¡Estamos trabajando para solucionarlo! :)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //facebook
    <string name="facebook_application_id" translatable="false">383974948990783</string>
    <string name="facebook_login_protocol_schema" translatable="false">fb383974948990783</string>
    <string name="title_activity_detalle_locales">Map</string>

</resources>
